// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bar.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import {foo} from './foo';

foo(5);

=====================================output=====================================
// @flow

import { foo } from "./foo";

foo(5);

================================================================================
`;

exports[`foo.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

export function foo(x: string): void {}

=====================================output=====================================
// @flow

export function foo(x: string): void {}

================================================================================
`;
